[package]
name = "rs_quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
polars = { version = "0.32.1", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
    "ndarray",
] }
serde = "1.0.186"
serde_json = "1.0.105"
time = "0.3.27"
tokio-test = "0.4.3"
yahoo_finance_api = "2.0.1"
