[package]
name = "rs_quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
nalgebra = "0.32.3"
plotters = "0.3.5"
polyfit-rs = "0.2.1"
time = "0.3.27"
tokio-test = "0.4.3"
yahoo_finance_api = "2.0.1"
